[dezc-housing] - check that record_status is all the same for 2015 file

--- a/00_analysis/02_price_paid_yearly.ipynb
+++ b/00_analysis/02_price_paid_yearly.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "953172a6-10bf-451a-ab10-e1a2f63da47c",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4       NORTH TYNESIDE  TYNE AND WEAR  A   A  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a25be48-f02f-49f7-ad8d-5ba9dc1e06a0",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "4                A             A  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,12 +626,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db6c9a8c-97b0-4dad-a074-b459fe117d99",
+   "cell_type": "markdown",
+   "id": "0500cd83-c6dc-471a-b412-28f9e831a863",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3. Do the yearly files have the same record status?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5e0e0996-50ca-4d6a-8c9f-23d74f0b0885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "record_status\n",
+       "A    1010708\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"record_status\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
